--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,126 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  background-color: #f0f2f5;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+h2, p {
+  margin: 0;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+.px {
+  padding: 40px 0;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  padding: 10px 0;
+  border-bottom: 1px solid #BDBDBD;
+  background-color: white;
+}
+
+.app-logo {
+  height: 32px;
+}
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.subheader {
+  font-weight: 600;
+  font-size: 20px;
+  box-shadow: inset 0px -1px 0px #D9D9D9;
+  height: 63px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+}
+
+.subheader__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.subheader__container--start {
+  justify-content: flex-start;
+  gap: 10px;
+}
+
+.add-button {
+  background-color: #F5222D;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  padding: 8px;
+  display: flex;
+  justify-content: center;
+  max-width: 200px;
+  align-items: center;
+  font-size: 20px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.add-button:hover {
+  background-color: #d41620;
+}
+
+.button-back {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 20px;
+}
+
+.button-back:hover {
+  background-color: rgb(236, 236, 236);
+}
+
+.container-alt {
+  width: 90%;
+  margin: 0 auto;
+}
+
+:root {
+  --animate-duration: 300ms;
+}
+
+@media (max-width: 768px) {
+  .container-alt {
+    width: 100%;
+  }
 }
